# gsi-csgo

./: Cargo.toml  LICENSE  README.md
examples/: multiple.rs
src/: lib.rs  main.rs
src/payload/: grenades.rs  map.rs  player.rs  team.rs
