[package]
name = "gsi-csgo"
version = "0.1.0"
edition = "2021"
authors = ["Sam Miller"]
readme = "README.md"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[dev-dependencies]
poem = "1.3.48"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16" }